Updates to pools example

--- a/bootstrap-javascript-rest/static/pools_form.html
+++ b/bootstrap-javascript-rest/static/pools_form.html
@@ -37,7 +37,7 @@
   <hr>
 
   <div class="container-fluid" style="background-color:transparent !important" style="text-align:center">
-    <form action="add_pool" method="post" id="pools_form" onsubmit="return validateData()">
+    <form action="search_libraries" method="post" id="pools_form" onsubmit="return validateData()">
         <label for="pool_name"><b>Pool Name</b></label>
         <input type="text" name="pool_name" required>
 
